--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: .
     environment:
       - PORT=4032
-      - REDIS_HOST=redis
+      - REDIS_URL=redis://redis:6379
     expose:
       - 4032
     ports:
